@@ -74,6 +74,7 @@ this repository contains the full copyright notices and license terms. -->
         <button name="button_hold" string="Hold Contract"/>
         <button name="button_stop" string="Stop Contract"/>
         <button name="button_reactivate" string="Reactivate Contract"/>
+        <button name="change_active_sub_status" string="Change Sub Status"/>
     </group>
     <newline/>
     <field name="form_color" invisible="1"/>
