@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<!-- This file is part of Coog. The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<form>
+    <label name="contract"/>
+    <field name="contract"/>
+    <newline/>
+    <label name="previous_sub_status"/>
+    <field name="previous_sub_status"/>
+    <label name="new_sub_status"/>
+    <field name="new_sub_status" widget="selection"/>
+</form>
