@@ -1,3 +1,4 @@
+* FEA#7737 Add 'Contract Change Sub Status' wizard on active contracts
 * BUG#7660: Do not set termination reason and end date of the activation history when reactivating a hold contract that has already been renewed
 * BUG#7633 fix searcher for initial_start_date on void contracts
 * FEA#7567 The contract dates can now be initialized by a business rule on the product
